# Otus_Learn_Python

./: README.md
homework_01/: README.md  main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: .gitignore  Dockerfile  pyproject.toml
testing/test_homework_02/: test_plane.py
